* 24/01/14 - v.2.0.4
   - introduced the threadPause() method in the ParallelFor/Reduce patterns. 
     It may be used to  put threads to sleep when the spinwait flag is set 
     and the parallel for is not   used for a while
   - separated parallel_for_internals.hpp and parallel_for.hpp 
   - added the possibility to control the grain size in the static scheduling 
     policy of the ParallelFor(Reduce) pattern(s)
   - ff_node::eosnotify interface changed: 
       virtual void eosnotify(int id=-1) --> virtual void eosnotify(ssize_t id=-1)
   - added the poolEvolutionCUDA pattern with some simple tests (beta version)
   - added the poolEvolution pattern with some simple tests (beta version)
   - stencilReduceCUDA added 
   - moved stencil.hpp to stencilReduce.hpp
* 27/01/14 - v.2.0.3
   - introduced GO_OUT: a new reserved message (see config.hpp)
   - optimized ParallelFor and ParallelReduce computation when executed inside
     a serial loop
   - changed the Barrier implementation (spinBarrier still the same)
   - added the ff_realNumCores() and the ff_numSockets() utility functions
   - a new lock-free task scheduling for the ParallelFor has been implemented. 
     The new scheduling policy is used when the scheduler thread (i.e. farm's emitter 
     thread) is not being started. This scheduling may be enabled at compile time 
     by compiling with the flag -DNO_PARFOR_SCHEDULER_THREAD or at run-time by  
     calling ParallelFor::disableScheduler.
   - added atomic_flag-based spin-lock (only for C++11-compliant compilers) 
   - defined ParallelFor and ParallelForReduce classes
   - removed initial underscore in the preprocessor conditional guards in 
     order to be compliant to the C++ standard
   - more work on parallel_for pattern to avoid starting the scheduler thread
     when there are not enough cores
   - fixed bug in the forall_Scheduler::init_data method
   - added the possibility to freeze and thaw all farm threads and then 